<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.olele76.paintingandstatue.feature.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.olele76.paintingandstatue.feature.painting.PaintingFragment"
        android:label="@string/title_painting"
        tools:layout="@layout/fragment_painting" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.olele76.paintingandstatue.feature.statue.StatueFragment"
        android:label="@string/title_statue"
        tools:layout="@layout/fragment_statue" />
</navigation>